ansible/apps/files/manifests/test-app/deplyment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx1-deploy
  namespace: nginx1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx1-app
  template:
    metadata:
      labels:
        app: nginx1-app
    spec:
      containers:
        - name: nginx1-app
          image: nginx
          ports:
            - name: web
              containerPort: 80
